1999-07-30    <mgd@HELEN>

	* acjdk.m4: Use jre/lib/rt.jar instead of classes.zip, if available.
	Convert that with cygpath -w if on cygwin.

1999-07-30  Alex Lancaster  <alex@santafe.edu>

	* acswarm.m4 (al_INIT_SWARM): LIBTOOL, set to use `libtool-swarm',
	in $(swarm_bindir), rather than the extracted libtool in
	top_builddir.  Extract (swarm_{bindir,libdir,datadir}) variables.

1999-07-28  Alex Lancaster  <alex@santafe.edu>

	* acjdk.m4: For kaffe, extract prefix from kaffe shell script and
	expand any inline ${prefix} references to ensure that jdkdatadir
	is an absolute path.

1999-07-27  Alex Lancaster  <alex@santafe.edu>

	* acjdk.m4: Only set $jdkincludedir to $jdkincludedir/include/java
	if it exists.

1999-07-26  Marcus G. Daniels  <mgd@pojoaque.santafe.edu>

	* actcltk.m4 (md_CHECK_TCLTK_LIBINC_VERSION_MATCH): New macro.

	* Makefile.am (EXTRA_DIST): Add aclonglong.m4.

	* aclonglong.m4: New file.

	* acjdk.m4: Check for win32 as well as winnt subdirectory.

1999-07-25  Alex Lancaster  <alex@santafe.edu>

	* acjdk.m4: Add explicit check for green and native threads in
	sparc-solaris case.

1999-07-21  Marcus G. Daniels  <mgd@pojoaque.santafe.edu>

	* acffi.m4: Don't look for defaults if no --with-{ffidir,ffcalldir}.

1999-07-09  Marcus G. Daniels  <mgd@pojoaque.santafe.edu>

	* acjdk.m4: Add check for native threads on HPUX (found on v11).

1999-07-08  Marcus G. Daniels  <mgd@pojoaque.santafe.edu>

	* actcltk.m4 (tclLibrary): Check for tclsh8.1.

1999-07-06  Marcus G. Daniels  <mgd@pojoaque.santafe.edu>

	* acffi.m4: Add avcall-i386-msvc.lo in the case of cygwin.

1999-07-02  Marcus G. Daniels  <mgd@pojoaque.santafe.edu>

	* acdll.m4: Use AC_DEFINE, not AC_SUBST, since AC_CONFIG_HEADER
	can't handle substitutions.

	* acjdk.m4: Don't use Sun JDK wrapper script.  Add info
	for proc, threads type, and LD_LIBRARY_PATH variable name.

1999-06-30  Marcus G. Daniels  <mgd@pojoaque.santafe.edu>

	* acffi.m4: Ignore libffi on Sparc and ix86.
